--- a/placeholder/product.html
+++ b/placeholder/product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product | Grocery E-Commerce</title>
+    <title>Product | Shop Jet eCommerce Website Html Template</title>
     <!-- Fav Icon -->
     <link rel="icon" type="image/x-icon" href="./assets/icon/fav.png" />
 
@@ -3041,14 +3041,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
@@ -3145,10 +3145,10 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >1,89€</span
                           >
                         </div>
@@ -3252,14 +3252,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
@@ -3363,14 +3363,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
@@ -3474,14 +3474,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
@@ -3585,14 +3585,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >8,99€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >6,69€</span
                           >
                         </div>
@@ -3689,10 +3689,10 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >2,39€</span
                           >
                         </div>
@@ -3796,14 +3796,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >4,99€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >3,89€</span
                           >
                         </div>
@@ -3907,14 +3907,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >4,59€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >3,89€</span
                           >
                         </div>
@@ -4018,14 +4018,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >16,99€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >13,59€</span
                           >
                         </div>
@@ -4122,10 +4122,10 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >1,29€</span
                           >
                         </div>
@@ -4222,10 +4222,10 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >2,39€</span
                           >
                         </div>
@@ -4329,14 +4329,14 @@
                       <div class="flex justify-between items-center gap-1">
                         <!-- Price -->
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >4,99€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >3,89€</span
                           >
                         </div>
@@ -4424,10 +4424,10 @@
                       </div>
                       <div class="flex justify-between items-center gap-1">
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >3,99€</span
                           >
                         </div>
@@ -4513,10 +4513,10 @@
                       </div>
                       <div class="flex justify-between items-center gap-1">
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >11,69€</span
                           >
                         </div>
@@ -4602,10 +4602,10 @@
                       </div>
                       <div class="flex justify-between items-center gap-1">
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >6,99€</span
                           >
                         </div>
@@ -4691,14 +4691,14 @@
                       </div>
                       <div class="flex justify-between items-center gap-1">
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >7,79€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >6,62€</span
                           >
                         </div>
@@ -4789,14 +4789,14 @@
                       </div>
                       <div class="flex justify-between items-center gap-1">
                         <div
-                          class="price-box flex items-center gap-2 font-secondary"
+                          class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                         >
                           <span
                             class="old-price text-[var(--text2)] line-through text-sm"
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
