--- a/placeholder/wishlist.html
+++ b/placeholder/wishlist.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wishlist | Grocery E-Commerce</title>
+    <title>Wishlist | Shop Jet eCommerce Website Html Template</title>
     <!-- Fav Icon -->
     <link rel="icon" type="image/x-icon" href="./assets/icon/fav.png" />
 
@@ -2487,7 +2487,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
@@ -2602,7 +2602,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
@@ -2720,7 +2720,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
@@ -2843,7 +2843,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
@@ -3014,7 +3014,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
@@ -3117,7 +3117,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
@@ -3223,7 +3223,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
@@ -3333,7 +3333,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
@@ -3443,7 +3443,7 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
