--- a/shopjet/product-single.html
+++ b/shopjet/product-single.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Single | Grocery E-Commerce</title>
+    <title>Product Single | Shop Jet eCommerce Website Html Template</title>
     <!-- Fav Icon -->
     <link rel="icon" type="image/x-icon" href="./assets/icon/fav.png" />
 
@@ -3489,7 +3489,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3527,14 +3527,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -3591,7 +3591,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3629,10 +3629,10 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -3696,7 +3696,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3734,14 +3734,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3805,7 +3805,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3843,14 +3843,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3914,7 +3914,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3952,14 +3952,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
