--- a/shopjet/wishlist.html
+++ b/shopjet/wishlist.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wishlist | Grocery E-Commerce</title>
+    <title>Wishlist | Shop Jet eCommerce Website Html Template</title>
     <!-- Fav Icon -->
     <link rel="icon" type="image/x-icon" href="./assets/icon/fav.png" />
 
@@ -2475,7 +2475,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -2513,14 +2513,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -2590,7 +2590,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -2628,10 +2628,10 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -2708,7 +2708,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -2746,14 +2746,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -2831,7 +2831,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -2869,14 +2869,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3002,7 +3002,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3040,14 +3040,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -3105,7 +3105,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3143,10 +3143,10 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -3211,7 +3211,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3249,14 +3249,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3321,7 +3321,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3359,14 +3359,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3431,7 +3431,7 @@
 
                 <!-- Details -->
                 <div class="details p-2 md:p-4 bg-[var(--accent1)]">
-                  <div class="flex h-[140px] flex-col gap-2 justify-between">
+                  <div class="flex h-[130px] flex-col gap-1 justify-between">
                     <div>
                       <div class="flex justify-between items-start gap-2 mb-1">
                         <a
@@ -3469,14 +3469,14 @@
                     <div class="flex justify-between items-center gap-1">
                       <!-- Price -->
                       <div
-                        class="price-box flex items-center gap-2 font-secondary"
+                        class="price-box flex flex-wrap items-center gap-0 md:gap-2 font-secondary"
                       >
                         <span
                           class="old-price text-[var(--text2)] line-through text-sm"
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[14px] lg:text-[22px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
