--- a/placeholder/checkout.html
+++ b/placeholder/checkout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkout | Grocery E-Commerce</title>
+    <title>Checkout | Shop Jet eCommerce Website Html Template</title>
     <!-- Fav Icon -->
     <link rel="icon" type="image/x-icon" href="./assets/icon/fav.png" />
 
